@@ -6,6 +6,9 @@ Change log for zeit.web
 
 - ZON-2664: Add link to AMP to head if article is AMP article
 
+- ZON-2576: Extract dogpile.cache integration to `pyramid_dogpile_cache2`,
+  so vivi can use it, too
+
 - FIX: scale crossword puzzle to full-width in print
 
 
